--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/HukakHePak/Weather#readme",
   "dependencies": {
-    "date-fns": "^2.28.0"
+    "date-fns": "^2.28.0",
+    "js-cookie": "^3.0.1"
   },
   "devDependencies": {
     "eslint": "^8.7.0",
